# FusionDex-IA

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
backend/: main.py  pyproject.toml
backend/db/: session.py
backend/routes/: ability_route.py  ai_route.py  creator_route.py  deps.py  fusion_route.py  generation_route.py  item_route.py  move_route.py  pokemon_route.py  sprite_route.py  stats_route.py  triple_fusion_route.py  type_route.py
backend/schemas/: ability.py  ai.py  creator.py  evolution.py  fusion.py  generation.py  item.py  location.py  move.py  pokemon.py  sprite.py  stats.py  triple_fusion.py  type_.py  weakness.py
backend/services/: ability_service.py  ai_service.py  ai_tools.py  creator_service.py  fusion_service.py  generation_service.py  item_service.py  llm_providers.py  move_service.py  pokemon_service.py  sprite_service.py  stats_service.py  triple_fusion_service.py  type_service.py
backend/tests/: conftest.py  test_ai.py  test_ai_tools.py  test_creators.py  test_fusion.py  test_generations.py  test_items.py  test_llm_providers.py  test_moves.py  test_pokemon.py  test_sprites_triples.py  test_stats_involving.py
backend/utils/: text.py
etl/: pipeline.py  pyproject.toml
etl/flows/: sprite_watcher.py
etl/pokepedia_scraper/: scrapy.cfg
etl/scripts/: enrich_abilities_fr.py  enrich_evolution_movesets.py  enrich_moves_fr.py  enrich_pokemon_fr.py  extract_abilities_if.py  extract_encounters_if.py  extract_locations_if.py  extract_moves_if.py  extract_pokedex_if.py  extract_pokepedia_names.py  extract_sprites.py  extract_stats_pokeapi.py  extract_triple_fusions.py  fix_move_experts.py  fix_national_ids.py  fix_pokemon_types.py  fix_stats_and_fr_names.py  fix_tms_from_pokeapi.py  fix_tutors_from_pokeapi.py  (+9 more)
(+98 files in other folders)
