[project]
name = "fusiondex-workspace"
version = "0.1.0"
description = "FusionDex-IA — documentation tooling (root workspace)"
requires-python = ">=3.12"

[dependency-groups]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-awesome-pages-plugin>=2.9",
    "pymdown-extensions>=10.7",
]

[tool.uv]
# Documentation-only workspace. Source packages live in backend/ and etl/.
package = false
